# cpp-module-cross-example

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  cmake-gui.ps1
cmake/: copy-std-module.cmake  std.cmake
src/: config.hpp  dbg.hpp  dbg.ixx  dbg_decl.hpp  dbg_macro.h  header_a.hpp  header_b.hpp  header_module_a.hpp  header_module_a.ixx  header_module_a_config.h  header_only.hpp  header_only.ixx  header_only_decl.hpp  main.ixx  main_static.ixx  module.hpp  module_a.ixx  module_b.ixx  module_define_false.hpp  module_define_true.hpp  module_undef.hpp  static_a.cpp  static_a.h  static_b.cpp  static_b.h  static_lib.cpp  static_lib.h  static_lib.ixx  test.hpp
